# acvv

./: CMakeLists.txt  main.cpp  main_rebase.cpp  shader.bat
include/: acvv.hpp  app.hpp  defines.hpp  glms.hpp  ve_base.hpp  ve_buffer.hpp  ve_camera.hpp  ve_cmd.hpp  ve_device.hpp  ve_graphic_pipeline.hpp  ve_image.hpp  ve_mesh.hpp  ve_multi_thread.hpp  ve_swapchain.hpp  vk.hpp  vkm.hpp
old/: main_loop_record.cpp  vk_init_command_buffer.cpp  vk_init_descriptor.cpp  vk_init_device.cpp  vk_init_framebuffers.cpp  vk_init_graphic_pipeline.cpp  vk_init_instance.cpp  vk_init_render_pass.cpp  vk_init_swapchain.cpp  vk_vertex_buffers.cpp
res/shader/: frag.spv  frag0.spv  frag1.spv  frag2.spv  shader.bat  vert.spv  vert0.spv  vulkan.frag  vulkan.vert  vulkan0.frag  vulkan0.vert  vulkan1.frag  vulkan2.frag
src/: acvv.cpp  acvv_command_buffer.cpp  acvv_create_framebuffers.cpp  acvv_create_graphics.cpp  acvv_create_instance.cpp  acvv_create_swapchain.cpp  acvv_descriptor.cpp  acvv_main_loop.cpp  acvv_render_pass.cpp  acvv_setup_device.cpp  acvv_setup_physical_device.cpp  acvv_texture.cpp  acvv_vertex_buffer.cpp  app.cpp  defines.cpp  main_loop_record.cpp  ve_base.cpp  ve_buffer.cpp  ve_camera.cpp  ve_cmd.cpp  ve_device.cpp  ve_graphic_pipeline.cpp  ve_image.cpp  ve_mesh.cpp  ve_multi_thread.cpp  ve_swapchain.cpp  vk_init_device.cpp  vk_init_framebuffers.cpp  vk_init_graphic_pipeline.cpp  vk_init_instance.cpp  vk_init_render_pass.cpp  vk_init_swap_chain.cpp  vk_init_swapchain.cpp  vk_vertex_buffers.cpp
